tests/rosetta/out/C/angle-difference-between-two-bearings-1.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
double angleDiff(double b1, double b2) {
  double d = b2 - b1;
  if (d < 0 - 180.0) {
    return d + 360.0;
  }
  if (d > 180.0) {
    return d - 360.0;
  }
  return d;
}

int main() {
  list_float testCases = list_float_create(2);
  testCases.data[0] = 20.0;
  testCases.data[1] = 45.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 45.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 85.0;
  testCases.data[1] = 90.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 95.0;
  testCases.data[1] = 90.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 125.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 145.0;
  list_float testCases = list_float_create(2);
  testCases.data[0] = 29.4803;
  testCases.data[1] = 0 - 88.6381;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 78.3251;
  testCases.data[1] = 0 - 159.036;
  list_int testCases_data[] = {testCases,      {2, testCases}, {2, testCases},
                               {2, testCases}, {2, testCases}, {2, testCases},
                               {2, testCases}, {2, testCases}};
  list_list_int testCases = {8, testCases_data};
  int testCases = testCases;
  for (int tmp1 = 0; tmp1 < 2; tmp1++) {
    list_float tc = testCases[tmp1];
    printf("%.17g\n", angleDiff(tc.data[0], tc.data[1]));
  }
  return 0;
}
